# fp-client

./: LICENSE  README.md  pyproject.toml
src/fp_client/: __init__.py  cli.py  client.py  models.py
tests/: test_client.py
