[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fp-client"
version = "1.0.0"
description = "Python client for Fingerprint Generator API (fp.mahiru.my.id)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "IRONCLAW" }]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[project.scripts]
fp-client = "fp_client.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fp_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
